2007-05-12  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	send EXISTS response when message count stays the same (bug #591)

2007-05-11  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Set IMAP args array members to NULL after freeing them (closes bug
	#590)
	* dbmail-message.c:
	Remove setvbuf call (closes bug #587)

2007-05-10  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Changed exists and recent to be unsigned integers, as they are
	elsewhere (closes bug #586)

2007-05-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	always send EXISTS response during status update
	* AUTHORS, ChangeLog, dbmail-imapsession.c, dbmail-mailbox.c, 
	test-scripts:
	minor cleanups
	* dbmailtypes.h:
	define u64_t guint64

2007-05-10  Paul Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-mailbox.c, test-scripts:
	minor cleanups
	* dbmailtypes.h:
	define u64_t guint64

2007-05-09  Paul Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, misc.c, test-scripts:
	work on merging search results correctly

2007-05-08  Paul Stevens <paul@nfg.nl>

	* check_dbmail_db.c, dbmail-message.c, dbmailtypes.h, modules:
	only use lower(headername) in dbpgsql

2007-05-08  Aaron Stone  <aaron@serendipity.cx>

	* lmtp.c:
	Accepted modified patch to handle invalid commands (closes bug #585)

2007-05-06  Paul Stevens <paul@nfg.nl>

	* AUTHORS:
	make the AUTHORS file git compliant

2007-05-06  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.h.in authmodule.c dm_getopt.h modules/authsql.c
	modules/authldap.c modules/dbpgsql.c sortmodule.c dbmailtypes.h
	dbmodule.c:
	Cleaned up the files that weren't getting headers from dbmail.h.

2007-05-01  Aaron Stone  <aaron@serendipity.cx>

	* modules/dbpgsql.c:
	Added a message about sqlsocket (closes bug #527)

2007-04-27  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.h.in, main.c, user.c, sievecmd.c, export.c, maintenance.c:
	Version and copyright cleanup on -V command line option.
