@@ -322,7 +322,6 @@ int PerformChildTask(ChildInfo_t * info)
 		
 		memset((void *)&client, 0, sizeof(client));	/* zero-init */
 
-		client.timeoutMsg = info->timeoutMsg;
 		client.timeout = info->timeout;
 		strncpy((char *)client.ip_src, inet_ntoa(saClient.sin_addr), IPNUM_LEN);
 		client.clientname[0] = '\0';
@@ -426,7 +425,6 @@ int manage_start_cli_server(ChildInfo_t * info)
 		
 	memset((void *)&client, 0, sizeof(client));	/* zero-init */
 
-	client.timeoutMsg = info->timeoutMsg;
 	client.timeout = info->timeout;
 
 	/* make streams */
