@@ -103,9 +103,8 @@ int tims_handle_connection(clientinfo_t * ci)
 				/* leave, an alarm has occured during fread */
 				if (alarm_occured) {
 					alarm_occured = 0;
-					client_close();
-					g_free(buffer);
-					return 0;
+					done = -2;
+					break;
 				}
 			} while (ferror(ci->rx) && errno == EINTR);
 
@@ -124,7 +123,9 @@ int tims_handle_connection(clientinfo_t * ci)
 			}
 		}
 
-		if (feof(ci->rx) || ferror(ci->rx)) {
+		if (done < 0) {
+			break;
+		} else if (feof(ci->rx) || ferror(ci->rx)) {
 			/* check client eof  */
 			done = -1;
 		} else {
@@ -134,6 +135,11 @@ int tims_handle_connection(clientinfo_t * ci)
 			done = tims(ci, buffer, &session);
 		}
 		fflush(ci->tx);
+	}
+
+	if (done==-2) {
+		ci_write(ci->tx, "BYE \"Connection timed out.\"\r\n");
+		TRACE(TRACE_ERROR, "client timed, connection closed");
 	}
 
 	/* memory cleanup */
